# parg

./: Cargo.toml  README.md
docs/: index.html
docs/doc/: search-index.js  settings.html  source-files.js
docs/doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/doc/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/doc/parg/: all.html  enum.Type.html  index.html  macro.create_cli_arguments!.html  macro.create_cli_arguments.html  sidebar-items.js  struct.Arg.html  struct.CliArguments.html
docs/doc/parg/arg/: enum.Type.html  struct.Arg.html
docs/doc/parg/cli_arguments/: struct.CliArguments.html
docs/doc/src/parg/: arg.rs.html  cli_arguments.rs.html  lib.rs.html  macros.rs.html
examples/: basic_usage.rs  create_args.rs  create_cli_arguments.rs  simple_args.rs
src/: arg.rs  cli_argument.rs  cli_arguments.rs  lib.rs  macros.rs
tests/: integration_test.rs
